--- a/pro.html
+++ b/pro.html
@@ -27,7 +27,7 @@
     <div class="navbar">
         <br><br><br><br>
         <div class="nav-logo col-2">
-<img src="/storage/emulated/0/pro/img/Screenshot_٢٠٢٣١٢٠٨-١٤٠٤٢١_Chrome.jpg" alt="Logo" height="150px" width="200px" class="nav-img" >
+<img src="img/Screenshot_٢٠٢٣١٢٠٨-١٤٠٤٢١_Chrome.jpg" alt="Logo" height="150px" width="200px" class="nav-img" >
         </div>
         <div class="nav-title col-4">
             <h1>Ahmed Wageh</h1>
@@ -64,7 +64,7 @@
     <h2 class="h2 des">About Me</h2>
     <hr class="dotted-hr">
     <div class="about-img col-6">
-        <img src="/storage/emulated/0/pro/img/myimg.jpg " alt="Image" height="200px" width="300px"/>
+        <img src="img/myimg.jpg " alt="Image" height="200px" width="300px"/>
     </div>
     <div class="about-me-info col-6">
         <p>Name: Ahmed Wageh</p>
@@ -84,7 +84,7 @@
     <div class="education col-6" >
         <div class="card">
             <div class="card-icon">
- <img src="/storage/emulated/0/pro/img/FB_IMG_1711885694551.jpg" alt="edu-image" height="150px" width="200px">
+ <img src="img/FB_IMG_1711885694551.jpg" alt="edu-image" height="150px" width="200px">
             </div>
   
             
@@ -138,11 +138,10 @@
     <div class="madeDiv">
     <p class ="made"><br>
     MADE   BY WITH AHMED WAGEH <br>
-        <a href="https://www.facebook.com">     <img class ="bi"src="/storage/emulated/0/DCIM/Screenshots/Screenshot_٢٠٢٤٠٢٢٢-١٤٤٤١٦_Facebook.jpg"></img></a>
-  <a href="https://Whatsapp.com">     <img class ="bi"src="/storage/emulated/0/pro/img/9ad0c968a114c5a978d7f6139e47f7ed.png"></img></a>
-                 <a href="https://Instagram.com">      <img class ="bi"src="/storage/emulated/0/pro/img/instagram_icon_navy.jpg"></img></a>
-                  <a href="https://twitter.com">     <img class ="bi"src="/storage/emulated/0/pro/img/STK160_X_Twitter_008.jpg"></img></a>
-         <a href="/storage/emulated/0/project/test.html">      <img class ="bi"src="/storage/emulated/0/pro/img/Screenshot_٢٠٢٣١٢٠٨-١٤٠٤٢١_Chrome.jpg"></img></a>
+  <a href="https://Whatsapp.com">     <img class ="bi"src="img/9ad0c968a114c5a978d7f6139e47f7ed.png"></img></a>
+                 <a href="https://Instagram.com">      <img class ="bi"src="img/instagram_icon_navy.jpg"></img></a>
+                  <a href="https://twitter.com">     <img class ="bi"src="img/STK160_X_Twitter_008.jpg"></img></a>
+         <a href="pro.html">      <img class ="bi"src="img/Screenshot_٢٠٢٣١٢٠٨-١٤٠٤٢١_Chrome.jpg"></img></a>
 <br>
 <br>
 </div>
