--- a/pro.html
+++ b/pro.html
@@ -27,7 +27,7 @@
     <div class="navbar">
         <br><br><br><br>
         <div class="nav-logo col-2">
-<img src="img/Screenshot_٢٠٢٣١٢٠٨-١٤٠٤٢١_Chrome.jpg" alt="Logo" height="150px" width="200px" class="nav-img" >
+<img src="Screenshot_٢٠٢٣١٢٠٨-١٤٠٤٢١_Chrome.jpg" alt="Logo" height="150px" width="200px" class="nav-img" >
         </div>
         <div class="nav-title col-4">
             <h1>Ahmed Wageh</h1>
@@ -64,7 +64,7 @@
     <h2 class="h2 des">About Me</h2>
     <hr class="dotted-hr">
     <div class="about-img col-6">
-        <img src="img/myimg.jpg " alt="Image" height="200px" width="300px"/>
+        <img src="myimg.jpg " alt="Image" height="200px" width="300px"/>
     </div>
     <div class="about-me-info col-6">
         <p>Name: Ahmed Wageh</p>
@@ -84,7 +84,7 @@
     <div class="education col-6" >
         <div class="card">
             <div class="card-icon">
- <img src="img/FB_IMG_1711885694551.jpg" alt="edu-image" height="150px" width="200px">
+ <img src="FB_IMG_1711885694551.jpg" alt="edu-image" height="150px" width="200px">
             </div>
   
             
@@ -94,7 +94,7 @@
     
     <div class="card">
         <div class="card-icon">
-          <img src="img/٢٠٢٤٠٣٣١_١٣٥٤٣٨.jpg" alt="skill-image" height="150px" width="200px">
+          <img src="٢٠٢٤٠٣٣١_١٣٥٤٣٨.jpg" alt="skill-image" height="150px" width="200px">
         </div>
           <div class="card-title">
            <h4>Skills</h4> 
