--- a/pro.html
+++ b/pro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,11 +15,7 @@
         
         <div class ="ti">
          <a href="#skills" class ="ti">   
-<span >Ahmed Wageh protofile</span> <img class ="bi"src="/storage/emulated/0/pro/img/myimg.jpg"></img>
-</div>
-</a>
-<br>
-    
+<span >Ahmed Wageh protofile</span>
 </div>
 
     <header>
@@ -134,15 +130,10 @@
 
 </div>
 </footer>
-<br><br><br>
+<br><br>
     <div class="madeDiv">
     <p class ="made"><br>
     MADE   BY WITH AHMED WAGEH <br>
-  <a href="https://Whatsapp.com">     <img class ="bi"src="img/9ad0c968a114c5a978d7f6139e47f7ed.png"></img></a>
-                 <a href="https://Instagram.com">      <img class ="bi"src="img/instagram_icon_navy.jpg"></img></a>
-                  <a href="https://twitter.com">     <img class ="bi"src="img/STK160_X_Twitter_008.jpg"></img></a>
-         <a href="pro.html">      <img class ="bi"src="img/Screenshot_٢٠٢٣١٢٠٨-١٤٠٤٢١_Chrome.jpg"></img></a>
-<br>
 <br>
 </div>
 
