--- a/pro.html
+++ b/pro.html
@@ -133,12 +133,10 @@
 <br><br>
     <div class="madeDiv">
     <p class ="made"><br>
-    MADE   BY WITH AHMED WAGEH <br>
-        
+    MADE BY WITH AHMED WAGEH       
 <br>
     </p>
 </div>
-
 
 </body>
   </html>
